--- a/app/templates/pitche.html
+++ b/app/templates/pitche.html
@@ -7,14 +7,14 @@
     <!-- Poster background -->
     <div class="row">
 
-        <h1>Reviews</h1>
+        <h1>Pitches</h1>
         <hr>
 
-        {% if reviews %}
-            {{macro.displayReviews(reviews)}}
+        {% if pitches %}
+            {{macro.displayPitch(pitches)}}
 
         {% else%}
-            <h3 class="text-center">This movie has no reviews </h3>
+            <h3 class="text-center">This is pitches </h3>
 
             <a class="btn btn-success btn-lg text-center" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
         {% endif %}
@@ -25,12 +25,12 @@
         </div>
 
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
-            <h3>{{ movie.title }}</h3>
+            <h3>{{ pitch.title }}</h3>
 
-            <p class="overview"> {{ movie.overview }}</p>
+            <p class="overview"> {{ category.overview }}</p>
 
-            <p class="ratings"> <b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
-            <a class="ratings" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
+            <p class="ratings"> <b> {{ category.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
+            <a class="ratings" href="/movie/review/new/{{movie.id}}"> Write a new pitch</a>
 
 </div>
     </div>
