--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,14 +30,14 @@
 <div class="container">
     
      
-    <a href="/pitch/new" class="btn"><button><strong>new pitch</strong></button></a><br>
+    <a href="/pitch/new" class="btn"><button><strong>New pitch</strong></button></a><br>
 
-{{macro.displayComment(comment)}}
+
 {%for pitch in pitches%}
 <p>{{pitch.category}}</p>
-<a href="/comment/new/{{pitch.id}}"><button><strong>new comment</strong></button></a>
+<a href="/comment/new/{{pitch.id}}"><button><strong>New comment</strong></button></a>
 {%endfor%}
-
+{{macro.displayComment(comment)}}
 </div>
 {% endblock%}
  
